# leetcode

./: .gitignore  README.md  header.h
solution/: CMakeLists.txt
solution/00/01/: sol.py
solution/00/02/: CMakeLists.txt  Makefile  sol.c  sol.cc  sol.py
solution/00/03/: CMakeLists.txt  Cargo.toml  sol.cc  sol.py  sol.rb  sol.rs
solution/00/04/: CMakeLists.txt  sol.c  sol.py
solution/00/05/: CMakeLists.txt  main.py  sol.c  sol_brute.cc  sol_brute.py  sol_dynamic.cc  sol_dynamic.py  sol_exp.cc  sol_manacher.cc
solution/00/06/: sol.py
solution/00/07/: sol.py  sol_opt.py
solution/00/08/: CMakeLists.txt  Cargo.toml  sol.cc  sol.py  sol.rs
solution/00/09/: CMakeLists.txt  sol.c  sol.py
solution/00/10/: CMakeLists.txt  sol.cc  sol.py
solution/00/11/: CMakeLists.txt  sol.cc  sol.py
solution/00/12/: CMakeLists.txt  Cargo.toml  sol.cc  sol.py  sol.rs
solution/00/13/: CMakeLists.txt  Cargo.toml  Makefile  sol.cc  sol.py  sol.rb  sol.rs
solution/00/14/: sol.py
solution/00/15/: CMakeLists.txt  sol.cc  sol.py
solution/00/16/: CMakeLists.txt  sol.cc  sol.py
solution/00/17/: CMakeLists.txt  sol.cc
solution/00/18/: CMakeLists.txt  sol.cc
solution/00/19/: CMakeLists.txt  sol.c
solution/00/20/: main.py  sol.py  sol_opt.py
solution/00/21/: CMakeLists.txt  sol.c  sol.cc
solution/00/22/: CMakeLists.txt  sol.cc
solution/00/23/: CMakeLists.txt  sol.cc
solution/00/24/: sol.py
solution/00/25/: CMakeLists.txt  sol.c
solution/00/26/: sol.py
solution/00/27/: sol.py
solution/00/28/: CMakeLists.txt  sol.c  sol.cc  sol.py  sol_fast.cc
(+272 files in other folders)
